--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,10 @@ spring:
     port: 6379
     lettuce:
       pool:
-        min-idle: 0
-        max-idle: 8
+        min-idle: 10
+        max-idle: 10
         max-active: 1
+        time-between-eviction-runs: 10s
     password: root
     database: 0
 mybatis-plus:
