--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,5 +28,8 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: ASSIGN_ID
+      logic-delete-field: isDeleted # 逻辑删除字段
+      logic-delete-value: 1 # 逻辑删除值
+      logic-not-delete-value: 0 # 逻辑未删除值
 reggie:
   path: D:\images\reggie\images\
